@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 Crown Copyright
+ * Copyright 2016-2025 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,7 +12,6 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- *
  */
 
 package stroom.pipeline.task;
@@ -58,20 +57,21 @@ import stroom.receive.common.StreamTargetStreamHandlers;
 import stroom.receive.common.StroomStreamProcessor;
 import stroom.test.AbstractCoreIntegrationTest;
 import stroom.test.CommonTranslationTestHelper;
-import stroom.test.ContentImportService;
+import stroom.test.ContentStoreTestSetup;
 import stroom.test.common.StroomCoreServerTestFileUtil;
 import stroom.util.date.DateUtil;
 import stroom.util.io.DiffUtil;
 import stroom.util.io.FileUtil;
 import stroom.util.io.StreamUtil;
+import stroom.util.logging.LambdaLogger;
+import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.logging.LogUtil;
 import stroom.util.shared.Indicators;
+import stroom.util.shared.NullSafe;
 import stroom.util.shared.ResultPage;
 
 import jakarta.inject.Inject;
 import jakarta.validation.constraints.NotNull;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
@@ -95,7 +95,7 @@ import static org.assertj.core.api.Assertions.fail;
 
 public abstract class TranslationTest extends AbstractCoreIntegrationTest {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(TranslationTest.class);
+    private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(TranslationTest.class);
 
     @Inject
     private ProcessorTaskTestHelper processorTaskTestHelper;
@@ -114,7 +114,7 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
     @Inject
     private ImportExportSerializer importExportSerializer;
     @Inject
-    private ContentImportService contentImportService;
+    private ContentStoreTestSetup contentStoreTestSetup;
     @Inject
     private CommonTranslationTestHelper commonTranslationTestHelper;
     @Inject
@@ -143,7 +143,7 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
     }
 
     private void assertNoExceptions(final List<Exception> exceptions) {
-        if (exceptions.size() > 0) {
+        if (!exceptions.isEmpty()) {
             final StringBuilder sb = new StringBuilder("Test failed with ")
                     .append(exceptions.size())
                     .append(" exceptions:");
@@ -191,9 +191,12 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
         final Path samplesDir = getSamplesDir();
         final Path configDir = samplesDir.resolve("config");
 
-        importExportSerializer.read(configDir, null, ImportSettings.auto());
+        importExportSerializer.read(
+                configDir,
+                null,
+                ImportSettings.auto());
 
-        contentImportService.importStandardPacks();
+        contentStoreTestSetup.installStandardPacks();
     }
 
     @NotNull
@@ -213,13 +216,13 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
         assertThat(pipelines)
                 .hasSize(1);
 
-        final DocRef pipelineRef = pipelines.get(0);
+        final DocRef pipelineRef = pipelines.getFirst();
 
         final List<DocRef> feedRefs = feedStore.findByName(pipelineRef.getName());
 
         FeedDoc feed = null;
-        if (feedRefs.size() > 0) {
-            feed = feedStore.readDocument(feedRefs.get(0));
+        if (!feedRefs.isEmpty()) {
+            feed = feedStore.readDocument(feedRefs.getFirst());
         }
         final FeedDoc feedDoc = feed;
 
@@ -286,61 +289,66 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
         // Create a stream processor for each pipeline.
         final List<DocRef> pipelines = pipelineStore.list();
         for (final DocRef pipelineRef : pipelines) {
-            final FindMetaCriteria findMetaCriteria =
-                    new FindMetaCriteria(MetaExpressionUtil.createFeedExpression(pipelineRef.getName()));
-            final ResultPage<Meta> metaResultPage = metaService.find(findMetaCriteria);
-            if (metaResultPage.size() == 0) {
-                final List<DocRef> feedRefs = feedStore.findByName(pipelineRef.getName());
+            // Don't run for trace pipelines as they don't produce output.
+            if (!pipelineRef.getName().contains("TRACE")) {
+                final FindMetaCriteria findMetaCriteria =
+                        new FindMetaCriteria(MetaExpressionUtil.createFeedExpression(pipelineRef.getName()));
+                final ResultPage<Meta> metaResultPage = metaService.find(findMetaCriteria);
+                if (metaResultPage.isEmpty()) {
+                    final List<DocRef> feedRefs = feedStore.findByName(pipelineRef.getName());
 
-                FeedDoc feed = null;
-                if (feedRefs.size() > 0) {
-                    feed = feedStore.readDocument(feedRefs.get(0));
-                }
-                final FeedDoc feedDoc = feed;
-
-                if (feedDoc != null && feedDoc.isReference() == reference) {
-                    int priority = 1;
-                    if (feed.isReference()) {
-                        priority++;
+                    FeedDoc feed = null;
+                    if (!feedRefs.isEmpty()) {
+                        feed = feedStore.readDocument(feedRefs.getFirst());
                     }
+                    final FeedDoc feedDoc = feed;
 
-                    final String streamType = feed.isReference()
-                            ? StreamTypeNames.RAW_REFERENCE
-                            : StreamTypeNames.RAW_EVENTS;
-
-                    final QueryData findStreamQueryData = QueryData.builder()
-                            .dataSource(MetaFields.STREAM_STORE_DOC_REF)
-                            .expression(ExpressionOperator.builder()
-                                    .addTextTerm(MetaFields.FEED, ExpressionTerm.Condition.EQUALS, feedDoc.getName())
-                                    .addTextTerm(MetaFields.TYPE, ExpressionTerm.Condition.EQUALS, streamType)
-                                    .build())
-                            .build();
-
-                    processorFilterService.create(
-                            CreateProcessFilterRequest
-                                    .builder()
-                                    .pipeline(pipelineRef)
-                                    .queryData(findStreamQueryData)
-                                    .priority(priority)
-                                    .build());
-
-                    // Add data.
-                    final List<Path> files = new ArrayList<>();
-                    addFiles(inputDir, files, feed.getName(), "in");
-                    addFiles(inputDir, files, feed.getName(), "zip");
-                    files.sort(Comparator.naturalOrder());
-                    files.forEach(filePath -> {
-                        // Add and test each file.
-                        final String fileName = filePath.getFileName().toString();
-                        final int index = fileName.lastIndexOf(".");
-                        final String stem = fileName.substring(0, index);
-
-                        try {
-                            test(filePath, feedDoc, outputDir, stem, compareOutput, exceptions);
-                        } catch (final IOException | RuntimeException e) {
-                            fail(e.getMessage());
+                    if (feedDoc != null && feedDoc.isReference() == reference) {
+                        int priority = 1;
+                        if (feed.isReference()) {
+                            priority++;
                         }
-                    });
+
+                        final String streamType = feed.isReference()
+                                ? StreamTypeNames.RAW_REFERENCE
+                                : StreamTypeNames.RAW_EVENTS;
+
+                        final QueryData findStreamQueryData = QueryData.builder()
+                                .dataSource(MetaFields.STREAM_STORE_DOC_REF)
+                                .expression(ExpressionOperator.builder()
+                                        .addTextTerm(MetaFields.FEED,
+                                                ExpressionTerm.Condition.EQUALS,
+                                                feedDoc.getName())
+                                        .addTextTerm(MetaFields.TYPE, ExpressionTerm.Condition.EQUALS, streamType)
+                                        .build())
+                                .build();
+
+                        processorFilterService.create(
+                                CreateProcessFilterRequest
+                                        .builder()
+                                        .pipeline(pipelineRef)
+                                        .queryData(findStreamQueryData)
+                                        .priority(priority)
+                                        .build());
+
+                        // Add data.
+                        final List<Path> files = new ArrayList<>();
+                        addFiles(inputDir, files, feed.getName(), "in");
+                        addFiles(inputDir, files, feed.getName(), "zip");
+                        files.sort(Comparator.naturalOrder());
+                        files.forEach(filePath -> {
+                            // Add and test each file.
+                            final String fileName = filePath.getFileName().toString();
+                            final int index = fileName.lastIndexOf(".");
+                            final String stem = fileName.substring(0, index);
+
+                            try {
+                                test(filePath, feedDoc, outputDir, stem, compareOutput, exceptions);
+                            } catch (final IOException | RuntimeException e) {
+                                fail(e.getMessage());
+                            }
+                        });
+                    }
                 }
             }
         }
@@ -363,13 +371,14 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
                       final String stem,
                       final boolean compareOutput,
                       final List<Exception> exceptions) throws IOException {
-        LOGGER.info("Testing:" +
-                        "\n--------------------------------------------------------------------------------" +
-                        "\ninput:  {}" +
-                        "\nfeed:   {}" +
-                        "\noutput: {}" +
-                        "\nstem:   {}" +
-                        "\n--------------------------------------------------------------------------------",
+        LOGGER.info("""
+                        Testing:
+                        --------------------------------------------------------------------------------
+                        input:  {}
+                        feed:   {}
+                        output: {}
+                        stem:   {}
+                        --------------------------------------------------------------------------------""",
                 inputFile.toAbsolutePath(),
                 feed.getName(),
                 outputDir.toAbsolutePath(),
@@ -538,7 +547,7 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
         ProcessorTaskList processorTasks = processorTaskTestHelper.assignTasks(100);
         List<ProcessorTask> list = processorTasks.getList();
         final List<ProcessorTask> dataProcessorTasks = new ArrayList<>(list.size());
-        while (list.size() > 0) {
+        while (!list.isEmpty()) {
             dataProcessorTasks.addAll(list);
             processorTasks = processorTaskTestHelper.assignTasks(100);
             list = processorTasks.getList();
@@ -554,13 +563,13 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
 //        final Optional<FeedDoc> feeds = feedDocCache.get(feedName);
 //        assertThat(feeds.isPresent()).as("No feeds found").isTrue();
         final List<DocRef> pipelines = pipelineStore.findByName(feedName);
-        assertThat(pipelines != null && pipelines.size() > 0)
+        assertThat(pipelines != null && !pipelines.isEmpty())
                 .as("No pipelines found")
                 .isTrue();
         assertThat(pipelines.size()).as("Expected 1 pipeline")
                 .isEqualTo(1);
 
-        final DocRef pipelineRef = pipelines.get(0);
+        final DocRef pipelineRef = pipelines.getFirst();
 //        final FeedDoc feed = feeds.get();
 
         LOGGER.info("Testing: {}, {}, {}",
@@ -622,7 +631,7 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
         for (final String elementId : stepData.getElementMap().keySet()) {
             final SharedElementData elementData = stepData.getElementData(elementId);
             assertThat(elementData.getIndicators() != null
-                    && elementData.getIndicators().getMaxSeverity() != null).as(
+                       && elementData.getIndicators().getMaxSeverity() != null).as(
                     "Translation stepping has indicators.").isFalse();
 //            assertThat(elementData.getCodeIndicators() != null
 //                    && elementData.getCodeIndicators().getMaxSeverity() != null).as(
@@ -656,7 +665,7 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
             requestBuilder.stepType(direction);
             final SteppingResult stepResponse = steppingService.step(requestBuilder.build());
 
-            if (stepResponse.getGeneralErrors() != null && stepResponse.getGeneralErrors().size() > 0) {
+            if (stepResponse.getGeneralErrors() != null && !stepResponse.getGeneralErrors().isEmpty()) {
                 throw new RuntimeException(stepResponse.getGeneralErrors().iterator().next());
             }
 
@@ -713,11 +722,11 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
 
                         final SharedElementData newElementData = new SharedElementData(
                                 input, output, indicators, elementData.isFormatInput(), elementData.isFormatOutput());
-                        SharedStepData newStepData = newResponse.getStepData();
-                        if (newStepData == null) {
-                            newStepData = new SharedStepData(stepResponse.getStepData().getSourceLocation(),
-                                    new HashMap<>());
-                        }
+                        final SharedStepData newStepData = NullSafe.getOrElseGet(
+                                newResponse,
+                                SteppingResult::getStepData,
+                                () -> new SharedStepData(stepResponse.getStepData().getSourceLocation(),
+                                        new HashMap<>()));
                         newStepData.getElementMap().put(elementId, newElementData);
                         newResponse = new SteppingResult(
                                 null,
@@ -750,11 +759,11 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
 
     private long getLatestStreamId() {
         final List<Meta> list = metaService.find(new FindMetaCriteria()).getValues();
-        if (list == null || list.size() == 0) {
+        if (list == null || list.isEmpty()) {
             return 0;
         }
         list.sort(Comparator.comparing(Meta::getId));
-        final Meta latest = list.get(list.size() - 1);
+        final Meta latest = list.getLast();
         return latest.getId();
     }
 
@@ -774,7 +783,7 @@ public abstract class TranslationTest extends AbstractCoreIntegrationTest {
                 LOGGER.error("Differences exist between the expected and actual output");
                 LOGGER.info("\nvimdiff {} {}", expectedFile, actualFile);
                 LOGGER.info("If you are satisfied the actual output is correct then copy " +
-                        "the actual over the expected and re-run.");
+                            "the actual over the expected and re-run.");
                 throw new RuntimeException(LogUtil.message("Files are not the same:\n{}\n{}",
                         FileUtil.getCanonicalPath(actualFile),
                         FileUtil.getCanonicalPath(expectedFile)));
