@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 Crown Copyright
+ * Copyright 2016-2025 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,12 +19,10 @@ package stroom.util.servlet;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.logging.LogUtil;
-import stroom.util.shared.NullSafe;
 
 import jakarta.inject.Provider;
 import jakarta.inject.Singleton;
 import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpSession;
 
 @Singleton
 public class HttpServletRequestHolder implements Provider<HttpServletRequest> {
@@ -44,15 +42,12 @@ public class HttpServletRequestHolder implements Provider<HttpServletRequest> {
             if (httpServletRequest == null) {
                 LOGGER.debug(() ->
                         LogUtil.message("Clearing held request against thread {}",
-                                Thread.currentThread().getId()));
+                                Thread.currentThread().threadId()));
             } else {
                 LOGGER.debug(() ->
                         LogUtil.message("Holding request with session id {} against thread {}",
-                                NullSafe.get(
-                                        httpServletRequest,
-                                        request -> request.getSession(false),
-                                        HttpSession::getId),
-                                Thread.currentThread().getId()));
+                                SessionUtil.getSessionId(httpServletRequest),
+                                Thread.currentThread().threadId()));
             }
         }
 
